k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: applications
  labels:
    app: applications
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: applications
  template:
    metadata:
      labels:
        app: applications
    spec:
      containers:
        - name: applications
          image: localhost:5000/applications:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          volumeMounts:
          - name: data
            mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: local-mount-pvc
