k8s/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-test
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.kube.test.com`)
      kind: Rule
      services:
        - kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
    - match: Host(`grafana.kube.test.com`)
      kind: Rule
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          port: 80
    - match: Host(`influxdb.kube.test.com`)
      kind: Rule
      services:
        - kind: Service
          name: influxdb-service
          port: 8086
